gulp activated, fonts and iconfonts added

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
         <div class="header__container">
         </div>
       </header>
-      <main class="main _icon-info">
-        lllllllLLL
+      <main class="main _icon-favs">
       </main>
       <footer class="footer">
         <div class="footer__container">
