--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,74 @@
 	<body>
     <div class="wrapper">
       <header class="header">
-        <div class="header__container">
+        <div class="header__top top-header">
+          <div class="top-header__container">
+            <div class="top-header__menu menu">
+              <nav class="menu__body">
+                <ul class="menu__list">
+                  <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+                  <li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
+                  <li class="menu__item"><a href="" class="menu__link">Новости</a></li>
+                  <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                </ul>
+              </nav>
+            </div>
+            <a href="" class="top-header__user _icon-user">Личный кабинет</a>
+            <button class="icon-menu"><span></span></button>
+          </div>
         </div>
+        <div class="header__body body-header">
+          <div class="body-header__container">
+            <a href="#" class="body-header__logo _icon-logo"></a>
+            <div class="body-header__search">
+              <form action="#" class="search-header">
+                <button type="submit" class="search-header__button _icon-search"></button>
+                <input autocomplete="off" name="form" type="text" class="search-header__input">
+              </form>
+            </div>
+            <div class="body-header__actions actions-header">
+              <a href="" class="actions-header__location _icon-location">Москва</a>
+              <div class="actions-header__phones phones-header">
+                <!-- data-spollers ??? -->
+                <div data-spollers class="phones-header__items">
+                  <div class="phones-header__item">
+                    <a href="tel:88007774967" class="phones-header__phone">8-800-777-49-67</a>
+                    <button type="button" data-spoller class="phones-header__arrow _icon-arrow-down"></button>
+                    <ul class="phones-header__list">
+                      <li><a href="tel:88007774967" class="phones-header__phone">8-800-777-49-67</a></li>
+                      <li><a href="tel:88007774967" class="phones-header__phone">8-800-455-49-67</a></li>
+                      <li><a href="tel:88007774967" class="phones-header__phone">8-800-988-49-67</a></li>
+                      <li><a href="tel:88007774967" class="phones-header__phone">8-800-565-49-67</a></li>
+                    </ul>
+                  </div>
+                </div> 
+                <button type="button" data-popup="#callback" class="phones-header__callback">Заказать звонок</button>
+                <div id="callback" aria-hidden="true" class="popup">
+                  <div class="popup__wrapper">
+                    <div class="popup__content">
+                      <button data-close type="button" class="popup__close">Закрыть</button>
+                      <div class="popup__text">
+                        Text For Popup Modal Window
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a href="#" class="actions-header__favorite _icon-favs"></a>
+              <div class="actions-header__cart cart-header">
+                <div class="cart-header__icon _icon-cart"><span>0</span></div>
+                <div class="cart-header__body">
+                  <div class="cart-header__summ">0 p.</div>
+                  <a href="" class="cart-header__link">Оформить заказ</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header__catalog"></div>
+        
       </header>
-      <main class="main _icon-favs">
+      <main class="main">
       </main>
       <footer class="footer">
         <div class="footer__container">
