--- a/src/index.html
+++ b/src/index.html
@@ -100,15 +100,15 @@
                       <a href="" class="sub-menu-catalog__link-category">Ножевая мастерская</a>
                     </div>
                     <ul class="sub-menu-catalog__list">
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Разделочные ножи</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Туристические ножи</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи охотничьи</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булатные ножи</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи из дамаска</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Тактического назначения</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Метательные ножи</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Мачете и кукри</a></li>
-                      <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи кухонные</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Разделочные ножи</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Туристические ножи</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Ножи охотничьи</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Булатные ножи</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Ножи из дамаска</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Тактического назначения</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Метательные ножи</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Мачете и кукри</a></li>
+                      <li class="sub-menu-catalog__item"><a target="_blank" href="catalog.html" class="sub-menu-catalog__link">Ножи кухонные</a></li>
                     </ul>
                     <ul class="sub-menu-catalog__list">
                       <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи АИР</a></li>
@@ -343,7 +343,7 @@
             </div>
           </div>
         </section>
-        <section class="page__catalog-cards catalog-cards">
+        <!-- <section class="page__catalog-cards catalog-cards">
           <div class="catalog-cards__container">
             <div class="catalog-cards__item item-catalog-card">
               <div class="item-catalog-card__body">
@@ -1781,10 +1781,219 @@
               <div class="products-slider__dotts dotts"></div>
             </div>
           </div>
-        </section>
+        </section> -->
       </main>
       <footer class="footer">
+        <section class="footer__title title-footer">
+          <div class="title-footer__container">
+            <h1 class="title-footer__title">Златоустовские ножи интернет-магазин "ЗЛАТМАКС"</h1>
+            <div class="title-footer__descr">Наш интернет-магазин &laquo;ЗЛАТМАКС&raquo; предлагает Вам ножи очень высокого качества из&nbsp;города оружейников&nbsp;&mdash; Златоуста. Златоустовские ножи известны и&nbsp;популярны среди потребителей как на&nbsp;российским рынке, так и&nbsp;за&nbsp;рубежом: ножи охотничьи, хозяйственные, туристические, рыбацкие, складные и&nbsp;метательные. Нож Златоуста&nbsp;&mdash; это идеальный друг и&nbsp;товарищ в&nbsp;повседневной жизни и&nbsp;в&nbsp;экстремальных ситуациях. На&nbsp;многую продукцию распространяется гарантия до&nbsp;10&nbsp;лет&nbsp;&mdash; это один из&nbsp;главных показателей качества. Для Вас на&nbsp;нашем сайте &laquo;zlatmax&raquo; предложен огромный ассортимент Златоустовских ножей. Наши менеджеры помогут определиться и&nbsp;подобрать самый лучший Златоустовский нож, ориентируясь на&nbsp;Ваши пожелания.</div>
+          </div>
+        </section>
         <div class="footer__container">
+          <div class="footer__body body-footer">
+            <div class="body-footer__row">
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">ИНФОРМАЦИЯ</button>
+                    <div class="spoller-footer__body">
+                      <nav class="menu-footer">
+                        <ul class="menu-footer__list">
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Златоустовские ножи в Москве и Московской области</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Ножевые стали</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">О нас</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Условия оплаты и доставки</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Политика конфиденциальности</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">СЛУЖБА ПОДДЕРЖКИ</button>
+                    <div class="spoller-footer__body">
+                      <nav class="menu-footer">
+                        <ul class="menu-footer__list">
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Контактная информация</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Возврат товара</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Карта сайта</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">ДОПОЛНИТЕЛЬНО</button>
+                    <div class="spoller-footer__body">
+                      <nav class="menu-footer">
+                        <ul class="menu-footer__list">
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Подарочные сертификаты</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Партнеры</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Товары со скидкой</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">ЛИЧНЫЙ КАБИНЕТ</button>
+                    <div class="spoller-footer__body">
+                      <nav class="menu-footer">
+                        <ul class="menu-footer__list">
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Личный кабинет</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">История заказов</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Мои закладки</a>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Рассылка новостей</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="body-footer__row">
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">КОНТАКТЫ</button>
+                    <div class="spoller-footer__body">
+                      <nav class="menu-footer">
+                        <ul class="menu-footer__list">
+                          <li class="menu-footer__item">
+                            <a href="tel:88007774967" class="menu-footer__link _icon-footer-phone">8 (800) 777-49-67</a>
+                          </li>
+                          <li class="menu-footer__item _icon-footer-clock">
+                            <div>
+                              <p>Пн-Пт </p>
+                              <p>7:00 - 16:00 (МСК)</p>
+                            </div>
+                          </li>
+                          <li class="menu-footer__item _icon-location">
+                            <div>
+                              <p>Златоуст, </p>
+                              <p>ул. Шоссейная, </p>
+                              <p>д. 1, офис «6Б»</p>
+                            </div>
+                          </li>
+                          <li class="menu-footer__item">
+                            <a href="mailto:info@zlatmax.ru" class="menu-footer__link _icon-footer-clock">info@zlatmax.ru</a>
+                          </li>
+                        </ul>
+                      </nav>
+                      <ul class="social-footer">
+                        <li class="socaial-footer__item"><a href="" class="social-footer__link">
+                          <img src="./img/footer/fb.svg" alt="">
+                        </a></li>
+                        <li class="socaial-footer__item"><a href="" class="social-footer__link">
+                          <img src="./img/footer/viber.svg" alt="">
+                        </a></li>
+                        <li class="socaial-footer__item"><a href="" class="social-footer__link">
+                          <img src="./img/footer/tg.svg" alt="">
+                        </a></li>
+                        <li class="socaial-footer__item"><a href="" class="social-footer__link">
+                          <img src="./img/footer/wa.svg" alt="">
+                        </a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">ПОЛЕЗНЫЕ ССЫЛКИ</button>
+                    <div class="spoller-footer__body">
+                      <a href="" class="menu-footer__link">Способы оплаты и доставки</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">НАША ГАРАНТИЯ</button>
+                    <div class="spoller-footer__body">
+                      <div class="spoller-footer__text">
+                        Недовольны своей покупкой? 
+                        Вы&nbsp;можете вернуть ее&nbsp;в&nbsp;течении 
+                        30&nbsp;дней с&nbsp;даты получения,
+                        согласно <a href="">нашим правилам</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="body-footer__block block-footer">
+                <div data-spollers="767.98" class="block-footer__spoller spoller-footer">
+                  <div class="spoller-footer__item">
+                    <button data-spoller type="button" class="spoller-footer__title">НОВОСТНАЯ РАССЫЛКА</button>
+                    <div class="spoller-footer__body">
+                      <form action="#" class="spoller-footer__subscribe footer-subscribe">
+                        <label class="footer-subscribe__label" for="subscribe-input">
+                          Подпишитесь прямо сейчас!
+                        </label>
+                        <div class="footer-subscribe__line">
+                          <input id="subscribe-input" class="footer-subscribe__input" autocomplete="off" type="text" name="form[]" data-error="Ошибка" data-required="email" placeholder="example@gmail.com">
+                          <button type="submit" class="footer-subscribe__button _icon-arrow-down"></button>
+                        </div>
+                      </form>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="body-footer__bottom">
+              <div class="body-footer__rules">
+                Все материалы, размещенные на сайте, носят справочный характер и не являются
+                публичной офертой, определяемойположениями Статьи 437 Гражданского кодекса Российской Федерации.
+                При копировании материалов гиперссылка на www.zlatmax.ru обязательна!
+              </div>
+              <div class="body-footer__copy">
+                Златоустовские ножи <span>www.zlatmax.ru ©</span>
+              </div>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
