webpack activated, gulp corrected

--- a/src/product.html
+++ b/src/product.html
@@ -239,7 +239,7 @@
                   <a href="" class="breadcrumps__link">Разделочные ножи</a>
                 </li>
                 <li class="breadcrumps__item">
-                  <span class="breadcrumps__current">Нож Снегирь</span>
+                  <span class="breadcrumps__current">Нож Лиса</span>
                 </li>
               </ul>
             </nav>
@@ -291,7 +291,7 @@
               <div class="main-product__body body-product">
                 <div class="body-product__header header-product">
                   <div class="header-product__line">
-                    <h1 class="header-product__title">Нож Снегирь</h1>
+                    <h1 class="header-product__title">Нож Лиса</h1>
                     <a href="" class="header-product__link _icon-scales"></a>
                     <a href="" class="header-product__link _icon-favs"></a>
                   </div>
